# esparrier_decomp_hid

./: .gitignore  Cargo.toml  readme.md  readme.ni
examples/: main.rs  single_key.rs
src/: constants.rs  hid_config.rs  hid_report_writer.rs  keyboard.rs  keyboard_report.rs  keycodes.rs  lib.rs  main.rs  usb_actuator.rs
src/synergy_hid/: mod.rs
