[package]
name = "esp32_hid"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["Nico Zucca<nazucca7@gmail.com>"]
description = "esp32_hid is a keyboard HID package for the ESP32"
homepage = "https://github.com/Nianzu/esp32_hid"
categories = ["embedded", "hardware-support"]
repository = "https://github.com/Nianzu/esp32_hid.git"
license = "MIT"
keywords = [
    "esp32s3",
    "usb",
    "hid",
    "esp32",
    "keyboard",
]

[lib]
name = "esp32_hid"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.16.1", default-features = false, features = [
    "colors",
    "critical-section",
    "esp32s3",
    "log-04",
    "uart",
] }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }
esp-alloc = { version = "0.9.0" }
embassy-executor = { version = "0.9.1" }
embassy-time = { version = "0.5.0", features = ["generic-queue-8"] }
esp-rtos = { version = "0.2.0", features = [
    "esp32s3",
    "embassy",
    "log-04",
] }
static_cell = { version = "2.1.1", features = ["nightly"] }


embassy-usb = { version = "0.5.1", features = [
    "max-handler-count-4",
    "max-interface-count-4",
] }

embassy-sync = "0.7.2"

[dev-dependencies]
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-backtrace = { version = "0.18.1", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }



[features]
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
